Tries to fix list spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -146,3 +146,7 @@ body.off-canvas-open #off-canvas-nav {
 .rotate-180 {
   transform: rotate(180deg);
 }
+
+ul {
+  margin-block-start: 0;
+}
